corrects spacing of comment input at tablet and desktop size

--- a/src/components/CommentForm/CommentForm.scss
+++ b/src/components/CommentForm/CommentForm.scss
@@ -45,7 +45,7 @@
         height: 6rem;
         font-family: "Avenir Next";
         font-size: .8125rem;
-        line-height: 1.125rem;
+        line-height: 1.4rem;
         font-weight: 400;
         width: 100%;
         border: 1px solid $divider-form-outline;
